--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,11 @@ Package: ffraster
 Title: Create Native raster Files With ff
 Version: 0.0.0.9000
 Authors@R: person("Michael D.","Sumner", role = c("aut", "cre"), email = "mdsumner@gmail.com")
-Description: Couplings between raster and ff files. 
-Depends: R (>= 3.2.2), ff, raster
+Description: Couplings between raster and ff files.
+Depends:
+    R (>= 3.2.2),
+    ff,
+    raster
 License: GPL-3
 LazyData: true
+RoxygenNote: 5.0.1
