--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,8 +4,8 @@ Version: 0.0.1.9001
 Authors@R: person("Michael D.","Sumner", role = c("aut", "cre"), email = "mdsumner@gmail.com")
 Description: Couplings between raster and ff files.
 Depends:
-    R (>= 3.2.2)
-Imports: 
+    R (>= 3.3.0)
+Imports:
     configr,
     ff,
     raster, 
@@ -13,5 +13,11 @@ Imports:
 License: GPL-3
 LazyData: true
 RoxygenNote: 6.0.1
-Suggests: covr,
-    testthat
+Suggests: 
+    digest, 
+    covr,
+    knitr,
+    rmarkdown,
+    testthat, 
+    viridis
+VignetteBuilder: knitr
