final build of ffraster (to be tidyff)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ S3method(ff_object,character)
 S3method(ff_type,BasicRaster)
 S3method(ff_type,character)
 S3method(ff_type,raster_ini)
+S3method(hyper_filter,tidyff)
 S3method(ini_file,BasicRaster)
 S3method(ini_file,character)
 export(active)
@@ -16,7 +17,6 @@ export(ff_object)
 export(ff_type)
 export(ffrarr)
 export(hyper_filter)
-export(hyper_filter.tidyff)
 export(ini_file)
 export(tidyff)
 importFrom(activate,"active<-")
@@ -36,5 +36,6 @@ importFrom(raster,xmax)
 importFrom(raster,xmin)
 importFrom(raster,ymax)
 importFrom(raster,ymin)
+importFrom(stats,setNames)
 importFrom(tidync,hyper_filter)
 importFrom(yesno,yesno)
