--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,17 @@
 Package: ffraster
 Title: Create Native raster Files With ff
-Version: 0.0.1.9001
+Version: 0.0.2
 Authors@R: person("Michael D.","Sumner", role = c("aut", "cre"), email = "mdsumner@gmail.com")
 Description: Couplings between raster and ff files.
 Depends:
     R (>= 3.3.0)
 Imports:
+    activate, 
     configr,
     ff,
     raster, 
+    tidync,
+    tibble,
     yesno
 License: GPL-3
 LazyData: true
@@ -21,3 +24,4 @@ Suggests:
     testthat, 
     viridis
 VignetteBuilder: knitr
+Remotes: r-gris/activate, r-gris/tidync
